// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LanguageSelection component accepts a url to the icon 1`] = `
<div
  class="LanguageSelection"
>
  <p>
    Introduction
  </p>
  <div>
    <h6
      class="MuiTypography-root heading Typography MuiTypography-h6"
    >
      Europe
    </h6>
    <div
      class="MuiGrid-root container MuiGrid-container MuiGrid-align-items-xs-center"
    >
      <div
        class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-3 MuiGrid-grid-xl-2"
      >
        <a
          aria-disabled="false"
          class="MuiButtonBase-root MuiButton-root buttonStyles-root-41 MuiButton-text buttonStyles-text-42 NavigationListButton link MuiButton-textPrimary"
          href="/al"
          tabindex="0"
        >
          <span
            class="MuiButton-label buttonStyles-label-44"
          >
            <span
              class="MuiButton-startIcon buttonStyles-startIcon-45 MuiButton-iconSizeMedium"
            >
              <img
                class="LanguageIcon"
                src="path/to/al.svg"
              />
            </span>
            Albania
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </a>
      </div>
      <div
        class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-3 MuiGrid-grid-xl-2"
      >
        <a
          aria-disabled="false"
          class="MuiButtonBase-root MuiButton-root buttonStyles-root-41 MuiButton-text buttonStyles-text-42 NavigationListButton link MuiButton-textPrimary"
          href="/at"
          tabindex="0"
        >
          <span
            class="MuiButton-label buttonStyles-label-44"
          >
            <span
              class="MuiButton-startIcon buttonStyles-startIcon-45 MuiButton-iconSizeMedium"
            >
              <img
                class="LanguageIcon"
                src="path/to/at.svg"
              />
            </span>
            Österreich
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`LanguageSelection component accepts introduction text 1`] = `
<div
  class="LanguageSelection"
>
  <p>
    Introduction
  </p>
  <div>
    <h6
      class="MuiTypography-root heading Typography MuiTypography-h6"
    >
      Europe
    </h6>
    <div
      class="MuiGrid-root container MuiGrid-container MuiGrid-align-items-xs-center"
    >
      <div
        class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-3 MuiGrid-grid-xl-2"
      >
        <a
          aria-disabled="false"
          class="MuiButtonBase-root MuiButton-root buttonStyles-root-21 MuiButton-text buttonStyles-text-22 NavigationListButton link MuiButton-textPrimary"
          href="/al"
          tabindex="0"
        >
          <span
            class="MuiButton-label buttonStyles-label-24"
          >
            <span
              class="MuiButton-startIcon buttonStyles-startIcon-25 MuiButton-iconSizeMedium"
            >
              <svg
                class="LanguageIcon"
              />
            </span>
            Albania
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </a>
      </div>
      <div
        class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-3 MuiGrid-grid-xl-2"
      >
        <a
          aria-disabled="false"
          class="MuiButtonBase-root MuiButton-root buttonStyles-root-21 MuiButton-text buttonStyles-text-22 NavigationListButton link MuiButton-textPrimary"
          href="/at"
          tabindex="0"
        >
          <span
            class="MuiButton-label buttonStyles-label-24"
          >
            <span
              class="MuiButton-startIcon buttonStyles-startIcon-25 MuiButton-iconSizeMedium"
            >
              <svg
                class="LanguageIcon"
              />
            </span>
            Österreich
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`LanguageSelection component renders correctly 1`] = `
<div
  class="LanguageSelection"
>
  <div>
    <h6
      class="MuiTypography-root heading Typography MuiTypography-h6"
    >
      Europe
    </h6>
    <div
      class="MuiGrid-root container MuiGrid-container MuiGrid-align-items-xs-center"
    >
      <div
        class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-3 MuiGrid-grid-xl-2"
      >
        <a
          aria-disabled="false"
          class="MuiButtonBase-root MuiButton-root buttonStyles-root-1 MuiButton-text buttonStyles-text-2 NavigationListButton link MuiButton-textPrimary"
          href="/al"
          tabindex="0"
        >
          <span
            class="MuiButton-label buttonStyles-label-4"
          >
            <span
              class="MuiButton-startIcon buttonStyles-startIcon-5 MuiButton-iconSizeMedium"
            >
              <svg
                class="LanguageIcon"
              />
            </span>
            Albania
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </a>
      </div>
      <div
        class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-3 MuiGrid-grid-xl-2"
      >
        <a
          aria-disabled="false"
          class="MuiButtonBase-root MuiButton-root buttonStyles-root-1 MuiButton-text buttonStyles-text-2 NavigationListButton link MuiButton-textPrimary"
          href="/at"
          tabindex="0"
        >
          <span
            class="MuiButton-label buttonStyles-label-4"
          >
            <span
              class="MuiButton-startIcon buttonStyles-startIcon-5 MuiButton-iconSizeMedium"
            >
              <svg
                class="LanguageIcon"
              />
            </span>
            Österreich
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </a>
      </div>
    </div>
  </div>
</div>
`;
